# HyperGraphLib

./: .gitignore  .travis.yml  CMakeLists.txt  FindGecode.cmake  LICENSE  README.md  doxyfile  index.html  params.json
demo/: CMakeLists.txt  Client.cpp  RandomHypergraphe.cpp
demo/include/: Client.hh  RandomHypergraphe.hh
doc/: AdjacentMatrix_8hh_source.html  AlgorithmeAbstrait_8hh_source.html  Connected_8hh_source.html  Diameter_8hh_source.html  Dual_8hh_source.html  Helly_8hh_source.html  HyperEdge_8hh_source.html  HyperFactory_8hh_source.html  HyperGraphStat_8hh_source.html  HyperVertex_8hh_source.html  HypergrapheAbstrait_8hh_source.html  Hypergraphe_8hh_source.html  IsomorphSpace_8hh_source.html  Isomorph_8hh_source.html  LibType_8hh_source.html  Linear_8hh_source.html  MotorAlgorithm_8hh_source.html  Path_8hh_source.html  RStructurePath_8hh_source.html  RStructure_8hh_source.html  ReaderAbstrait_8hh_source.html  ReaderFile_8hh_source.html  Simple_8hh_source.html  WriterAbstrait_8hh_source.html  WriterFile_8hh_source.html  annotated.html  classAdjacentMatrix-members.html  classAdjacentMatrix.html  classAlgorithmeAbstrait-members.html  classAlgorithmeAbstrait.html  classConnected-members.html  classConnected.html  classDiameter-members.html  classDiameter.html  classDual-members.html  classDual.html  classHelly-members.html  classHelly.html  classHyperEdge-members.html  classHyperEdge.html  (+74 more)
doc/search/: all_0.html  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  all_e.js  all_f.html  all_f.js  classes_0.html  classes_0.js  classes_1.html  (+50 more)
include/Hypergraph/algorithm/: Connected.hh  Diameter.hh  Dual.hh  Helly.hh  HyperGraphStat.hh  Isomorph.hh  IsomorphSpace.hh  Linear.hh  Path.hh  Simple.hh  kRegular.hh  kUniform.hh
include/Hypergraph/io/: ReaderAbstrait.hh  ReaderFile.hh  WriterAbstrait.hh  WriterFile.hh
include/Hypergraph/model/: AdjacentMatrix.hh  AlgorithmeAbstrait.hh  HyperEdge.hh  HyperFactory.hh  HyperVertex.hh  Hypergraphe.hh  HypergrapheAbstrait.hh  LibType.hh  MotorAlgorithm.hh  RStructure.hh  RStructurePath.hh
include/algorithm/: Diameter.hh
include/model/: Hypergraphe.hh  LibType.hh  MotorAlgorithm.hh  RStructure.hh  RStructurePath.hh
src/: CMakeLists.txt
src/algorithm/: Connected.cpp  Diameter.cpp  Dual.cpp  Helly.cpp  HyperGraphStat.cpp  Isomorph.cpp  IsomorphSpace.cpp  Linear.cpp  Path.cpp  Simple.cpp  kRegular.cpp  kUniform.cpp
src/algorithm/include/: Connected.hh  Diameter.hh  Dual.hh  Helly.hh  HyperGraphStat.hh  Isomorph.hh  IsomorphSpace.hh  Linear.hh  Path.hh  Simple.hh  kRegular.hh  kUniform.hh
src/client/: Client.cpp  RandomHypergraphe.cpp
src/client/include/: Client.hh  RandomHypergraphe.hh
src/io/: ReaderAbstrait.cpp  ReaderFile.cpp  WriterAbstrait.cpp  WriterFile.cpp
src/io/include/: ReaderAbstrait.hh  ReaderFile.hh  WriterAbstrait.hh  WriterFile.hh
src/lib/: LightTreeLib.hpp
src/model/: AdjacentMatrix.cpp  AlgorithmeAbstrait.cpp  HyperEdge.cpp  HyperFactory.cpp  HyperVertex.cpp  Hypergraphe.cpp  HypergrapheAbstrait.cpp  MotorAlgorithm.cpp  RStructure.cpp  RStructurePath.cpp
src/model/include/: AdjacentMatrix.hh  AlgorithmeAbstrait.hh  HyperEdge.hh  HyperFactory.hh  HyperVertex.hh  Hypergraphe.hh  HypergrapheAbstrait.hh  LibType.hh  MotorAlgorithm.hh  RStructure.hh  RStructurePath.hh
test/: CMakeLists.txt  test.cpp  test_algorithm.cpp  test_io.cpp
